<resources>
    <string name="app_name">Bio Block</string>
    <string name="bio">BIO</string>
    <string name="block">BLOCK</string>
    <string name="login_desc">\'공유경제 공유수익 꿈꾸던 행성\'</string>
    <string name="for_got_password">Forgot your password?</string>
    <string name="Remember_me">Remember me</string>
    <string name="login_btn_text">Login</string>
    <string name="signup_btn_text">Register</string>
    <string name="home">HOME</string>
    <string name="myfarm">My Farm</string>
    <string name="shopping">Shopping</string>
    <string name="bioblock">Bio Block</string>
    <string name="my_info">My Info</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_info">정보수정</string>
    <string name="logout">logout</string>
    <string name="my_page">MY PAGE</string>
    <string name="history">HISTORY</string>
    <string name="cap_save_seed">SAVE SEED</string>
    <string name="save_seed">Save Seed</string>
    <string name="cap_farm_seed">FARM_SEED</string>
    <string name="cap_harvest_history">수확된 내역</string>
    <string name="cap_bonus_seed">보너스 SEED</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">더보기</string>
    <string name="bonus_seed">Bonus Seed</string>
    <string name="my_seed">My Seed</string>
    <string name="fram_seed">Farm Seed</string>
    <string name="earning_history">적립내역</string>
    <string name="seed">Seed</string>
    <string name="earning_seed">적립 Seed</string>
    <string name="neighbor_block">이웃 블록</string>
    <string name="seed_gift">Seed 선물하기</string>
    <string name="gifts_history">선물 내역</string>
    <string name="find_merchants">가맹점 찾기</string>
    <string name="merchant_use_history">가맹점 이용내역</string>
    <string name="use_history">이용내역</string>
    <string name="applying_for_merchant">가맹점 신청하기</string>
    <string name="harvest_seed">My Seed</string>

    <string name="bio_desc_1">바이오 블록은 1차 산업과 바이오 산업 기반의 공유경제 시스템입니다. 현재 우리나라에서 공유경제라 함은 제품이나 서비스를 여러 사용자가 함께 공유하는 정도의 개념만 있고 일부만 서비스되고 있습니다. 공유경제는 제품과 서비스만 공유하는 것이 아니라 제품의 판매 또는 서비스의 제공으로 창출되는 이익의 공유도 함께 있어야 진정한 공유경제라 할 수 있습니다.\n\n
우리나라의 대기업 그룹들은 진정한 공유경제나 사회적공헌에 있어 매우 소극적이거나 아예 실행할 마음조차 없는 것 같습니다. 그룹 총수일가의 모럴헤저드(moral hazard)에 대한 매스컴의 보도를 보며 열폭하는 우리 소비자들은 왜 매번 당하고만 있어야 할까요? 그들이 가지고 있는 사회적 지위와 부의 축적은 소비자들과 그 회사의 직원들, 협력업체 직원들이 만들어준 것 입니다. 지위를 만들어줬더니 갑질을 하고 부를 쌓아줬더니 사회적공헌은 뒷전이고 가족승계 및 일가친척 고용에 혈안이 되어있습니다. 이대로 당하고만 있어야 할까요?\n\n
이에 바이오 블록은 소비자가 중심이 되어 원료 -> 생산 -> 마케팅 -> 유통 -> 소비에 이르기까지 모든 과정에 여러분들이 직접 참여하여 공동경제 플랫폼을 만들고, 여기서 창출되는 이익은 서로 공유하여 나누고, 혁신적인 기술이나 아이디어를 가진 기업체나 발명가들이나 새로운 아이템 발굴 또는 개발에 투자를 하게 됩니다. 대기업에 편중된 이익구조 기득권 세력에 기득권 세력 때문에 빛을 보지 못하고 사라져가는 기술들, 힘없는 서민들에게는 불리한 제도적 모순들을 이제는 우리 스스로 바로 잡아야 합니다.\n\n
현명한 소비와 타인을 배려하는 마음이 1이라도 있다면 바이오 블록에서는 상상하는 모든 것이 가능합니다.</string>
    <string name="decentralized_benefit_rule">Decentralized Benefit Rule : 이익의 탈 중앙화</string>
    <string name="benefit_sharing_system">[ Benefit Sharing System ]</string>
    <string name="preparing_for_service">Preparing for service : Coin = Block Chain?</string>
    <string name="bio_desc_2">블록체인을 모르면서 코인을 하는 코인충들이 아직도 많습니다. 블록체인의 보안 기술로 가상화폐를 통용할 수 있는 것이지 코인 자체가 블록체인이 아닙니다. 숫자 에 불과한 현재의 코인으로 무엇을 할 수 있을까요? 이미 진정성을 가지고 가상화폐의 가치를 알았던 사람들은 돈을 벌고 떠났습니다.\n\n
아직도 코인거래로 수십 배 수백 배 돈을 벌수 있다고 떠드는 사람들은 대부분 다단계에서 사기치던 사람들입니다. 이미 국내의 코인시장은 그들로 인하여 쓰레 기장이 되어 버렸습니다. 블록체인이 뭔지도 모르고, 코인을 발행한 회사의 실체나 재정관리 등 기초적인 정보도 모르면서 코인의 투자가치에 대해 논하고 투자를 유치합니다. 얼마나 더 많은 사람들이 집을 날리고 가정이 파탄나야 이 쓰레기들을 정부에서 적극적으로 소각하기 시작할까요?\n\n
지금은 블록체인 기술을 체계적으로 발전시키고 각 산업들과 융합하여 합리적이고 유기적인 가상화폐 생태계 조성에 관심을 더 기울여야 하는 시작 단계에 불과합니 다. 화폐로써 가치평가도 제대로 안된 코인을 벌써부터 트레이딩 하여 수익을 얻는다는 것은 사기꾼들이 만든 유혹의 덫 입니다. 그런데 왜 코인에 투자하는 사람들이 계속 생길까요? 이는 투자금 날린 사람들이 본전 찾기위해서 누군가를 속이고 투자를 유치하기 때문입니다. 악순환이 이어지고 피해자는 계속 양산되고 있습니다.\n\n
이에 바이오블록은 산업의 근간이 되는 1차 산업을 기반으로 자유시장경제 생태계를 조성하고, 현실에 입각하여 실물 거래가 가능하고 투자 가치가 높은 Bio Seed를 개발 중에 있습니다.</string>
    <string name="my_info_second_title">My Info 나의 정보</string>
    <string name="save_seed_second_title">적립된 Seed 내역</string>
    <string name="farm_seed_second_title">Farm Seed 내역</string>
    <string name="my_seed_second_title">My Seed 내역</string>
    <string name="bonus_seed_second_title">Bonus Seed 내역</string>
    <string name="seed_shipment_history">Seed 출하내역</string>
    <string name="language_setting">언어설정</string>
    <string name="contact">1:1 문의</string>
    <string name="notice">공지사항</string>
    <string name="changing_information">정보수정</string>
    <string name="my_save_seed_guide_1">나의 전체 적립 Seed 는</string>
    <string name="send">보내기</string>
    <string name="find_friend_id_guide_text1">선물해주고 싶은 친구의 </string>
    <string name="find_friend_id_guide_text2">ID</string>
    <string name="find_friend_id_guide_text3">를 검색하여 입력하세요.</string>
    <string name="not_found_friend">사용자를 찾을 수 없습니다.</string>
    <string name="not_found_friend_result">사용자를 입력하세요.</string>
    <string name="enter_the_friend_id_again">친구 ID를 다시 확인해주세요.</string>
    <string name="gift_btn_text">선물하기</string>
    <string name="gift_my_seed_guide_text1">전체 My Seed는</string>
    <string name="gift_my_seed_guide_text2">입니다.</string>
    <string name="find_id_btn_text">ID 검색하기</string>
    <string name="chain_history">Chain Service</string>
    <string name="search">검색하기</string>
    <string name="chain_search">가까운 CHAIN을 검색해보세요.</string>
    <string name="place">플레이스</string>
    <string name="new_chain">신규 CHAIN</string>
    <string name="all">전체</string>
    <string name="bioblock_signup">BIO BLOCK 회원가입 후  CHAIN 가입신청을 해주세요.</string>
    <string name="biobloc_id">BIO BLOCK 아이디</string>
    <string name="business_or_intercontinental">업체 또는 상호명</string>
    <string name="sectors">업종</string>
    <string name="owner_name">대표자 이름</string>
    <string name="business_number">사업자 번호</string>
    <string name="address">주소</string>
    <string name="tel">전화번호</string>
    <string name="email">이메일</string>
    <string name="bank">은행</string>
    <string name="bank_number">계좌번호</string>
    <string name="business_or_service_desc">업체 또는 서비스 설명</string>
    <string name="search_address">주소 검색하기</string>
    <string name="apply">신청하기</string>
    <string name="regist">Register</string>
    <string name="star">*</string>
    <string name="press_back_message">종료하려면 \'Back\' 버튼을 다시 누르십시오.</string>
    <string name="required_permission_message">앱 구동에 필요한 필수 퍼미션입니다. 퍼미션에 동의해주세요.</string>
    <string name="qr_message">직사각형 안에 QR 코드를 읽혀주세요.</string>
    <string name="cancelled">카메라 취소됨</string>
    <string name="do_notice">문의하기</string>
    <string name="title">제목</string>
    <string name="notice_info">문의내용</string>
    <string name="required_order">포인트를 입력하세요</string>
    <string name="required_search_id">사용자 아이디를 입력하세요</string>
    <string name="toast_text_clipboard_adress">복사 성공</string>
    <string name="board">공지사항</string>
    <string name="close">닫기</string>
    <string name="chain_service">Chain Service</string>
    <string name="chain_serivce_title">가맹점 전체내역</string>


</resources>
