<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/test"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:title="@string/logout" />
    </group>

    <group
        android:id="@+id/test1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/draw_home"
            android:title="@string/home"
            android:icon="@drawable/small_curcle_blue"/>
        <item
            android:id="@+id/draw_myfarm"
            android:title="@string/myfarm" />
        <item
            android:id="@+id/draw_shopping"
            android:title="@string/shopping" />
        <item
            android:id="@+id/draw_bioblock"
            android:title="@string/bioblock" />
        <item
            android:id="@+id/draw_my_info"
            android:title="@string/my_info" />
    </group>

    <group
        android:id="@+id/test2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/draw_save_seed"
            android:title="@string/cap_save_seed" />
        <item
            android:id="@+id/draw_farm_seed"
            android:title="@string/cap_farm_seed" />
        <item
            android:id="@+id/draw_harvest_history"
            android:title="@string/cap_harvest_history" />
        <item
            android:id="@+id/draw_bonus_seed"
            android:title="@string/cap_bonus_seed" />
    </group>
</menu>
