<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.whyble.farm.seed.user.signup.login.LoginActivity" />
        <variable
            name="domain"
            type="com.whyble.farm.seed.domain.User" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".user.signup.login.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="90dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="30dp"
                     android:textColor="@color/farm_green"
                    android:text="@string/bio"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:textColor="@color/right_blue"
                    android:text="@string/block"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/right_blue"
                    android:text="@string/login_desc"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:padding="10dp"
                    android:hint="Username"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12dp"
                    android:text="@={domain.id}"
                    android:maxLines="1"
                    android:gravity="left"
                    android:paddingLeft="4dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:background="@drawable/common_btn"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:padding="10dp"
                    android:hint="password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="12dp"
                    android:text="@={domain.passwd}"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:paddingLeft="4dp"
                    android:gravity="left"
                    android:background="@drawable/common_btn"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/white"
                    android:alpha="0.5"
                    android:text="@string/for_got_password"/>

                <!--<LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textColor="@color/white"
                        android:text="@string/Remember_me"/>

                </LinearLayout>-->


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                 android:layout_marginTop="8dp"
                android:orientation="vertical">


                <Button
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btn_text"
                    android:textColor="@color/white"
                    android:onClick="@{activity::loginBtnClick}"
                    android:background="@drawable/common_btn"/>

                <Button
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_btn_text"
                    android:textColor="@color/white"
                    android:onClick="@{activity::loginRegistClick}"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/common_btn"/>
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</layout>